--- a/css/main.css
+++ b/css/main.css
@@ -7,37 +7,37 @@ html, body{
     height: 100vh;
     width: 100%;
     background-color: #f1f1f1;
-    display: flex;
-    flex-direction: column;
     font-family: Arial, Helvetica, sans-serif;
+    display: flex;
+    flex-direction: row;
 }
 nav{
-    position: fixed;
     height: 100vh;
     background-color: #ccc; 
     font-size: 20px;
     text-align: center;
     border-right: 2px solid #222;
     display: flex;
-    flex: 1;
     flex-direction: column;
+    flex: 1;
 }
 nav header{
-    font-size: 40px;
+    font-size: 35px;
     margin-bottom: 5%;
     text-transform: uppercase;
     font-weight: 600;
     text-align: center;
 }
 nav a{
-    margin: 20px;
     text-decoration: none;
+    border-top: 2px #555 solid;
+    padding: 15px;
     color: #111;
 }
-
 main{
-    position: relative;
-    flex-wrap: wrap;
+    flex:2;
+    overflow: scroll;
+    height:100vh;
 }
 main section{
     margin: 5%;
@@ -63,4 +63,12 @@ main code{
 }
 main article{
     font-size: 18px;
+}
+@media only screen and (max-width: 650px){
+    nav{
+        display: none;
+    }
+    main{
+        text-align: justify;
+    }
 }
